# autoknit

./: .gitignore  CMakeLists.txt  README-cmake-node.md  addon.cpp  gen-test-st.js  index.js  package-lock.json  package.json  schedule.cpp  test-schedule.js
kit/: kit-SDL3.cpp
libgeodesic/: CMakeLists.txt
